--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=demo
 # SQLite Database setting
 # ---------------------------------
 # 1. SQLite data path (ex: "C:/db/shop.db")
-spring.datasource.url=jdbc:sqlite:D:/Program_Station/java/final_project/demo/db/shop.db
+spring.datasource.url=jdbc:sqlite:db/shop.db
 # 2. Driver name
 spring.datasource.driver-class-name=org.sqlite.JDBC
 # 3. Tell JPA (Hibernate) this is  SQLite
