--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.13.2",
     "pinia": "^3.0.4",
+    "sweetalert2": "^11.26.3",
     "vue": "^3.5.24",
     "vue-router": "^4.6.3"
   },
